--- a/SocietyApp-SPA/src/app/app.component.html
+++ b/SocietyApp-SPA/src/app/app.component.html
@@ -1,10 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div >
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-<app-value></app-value>
-</div>
+<app-nav></app-nav>
+<app-home></app-home>
+
 
 <router-outlet></router-outlet>
- 
