--- a/SocietyApp-SPA/src/app/home/home.component.html
+++ b/SocietyApp-SPA/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="!registerMode" style="text-align: center">
     <h1>Find your match</h1>
     <p class="lead">
-      Come on in to view your matches... All you need to do is sign up!
+      Welcome to Arihant Aarohi CHS                                                         !
     </p>
     <div class="text-center">
       <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">
