--- a/SocietyApp-SPA/src/app/home/home.component.html
+++ b/SocietyApp-SPA/src/app/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="container mt-5">
   <div *ngIf="!registerMode" style="text-align: center">
-    <h1>Find your match</h1>
-    <p class="lead">
+    <!-- <h1>Welcome to Arihant Aarohi CHS</h1> -->
+    <!-- <p class="lead">
       Welcome to Arihant Aarohi CHS                                                         !
-    </p>
+    </p> -->
     <div class="text-center">
       <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">
         Register
       </button>
-      <button class="btn btn-info btn-lg">Learn more</button>
+      <!-- <button class="btn btn-info btn-lg">Learn more</button> -->
     </div>
   </div>
 
