--- a/SocietyApp-SPA/src/app/nav/nav.component.html
+++ b/SocietyApp-SPA/src/app/nav/nav.component.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-expand-md navbar-dark  bg-dark">
   <div class="container">
- <a class="navbar-brand" href="#"></a> 
+ <a class="navbar-brand" [routerLink]="['/home']" >Arrihant Aarohi</a> 
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home </a>
+      <li class="nav-item active"  routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/members']" >Members </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Information</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/information']"  >Information</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#">Notice Board</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link " [routerLink]="['/noticeboard']">Notice Board</a>
       </li>
       
   
