--- a/SocietyApp-SPA/src/app/nav/nav.component.html
+++ b/SocietyApp-SPA/src/app/nav/nav.component.html
@@ -1,24 +1,33 @@
-<nav class="navbar navbar-expand-md navbar-dark  bg-dark">
-  <div class="container">
- <a class="navbar-brand" [routerLink]="['/home']" >Arrihant Aarohi</a> 
- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+
+<nav class="navbar navbar-expand-lg navbar-dark  bg-dark">
+    <div class="container-fluid">
+ <a class="navbar-brand" [routerLink]="['/home']" href="#" >Arihant Aarohi</a> 
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" (click)="toggleNavbar()" >
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  
-    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
+      <span class="navbar-toggler-icon"></span>
+  </button> -->
+  <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }" id="navbarsExampleDefault" >
+    <ul  *ngIf="loggedIn()" class="navbar-nav mr-auto" >      
+        <!-- <a class="nav-item nav-link" routerLinkActive="active" [routerLink]="['/members']">heating</a> -->
+        
       <li class="nav-item active"  routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/members']" >Members </a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
+      </li> 
+      <!-- <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/information']"  >Information</a>
+      </li> -->
+       <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link " [routerLink]="['/noticeboard']">Notice Board</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link " [routerLink]="['/noticeboard']">Notice Board</a>
+        <a class="nav-link " [routerLink]="['/events']">Events</a>
       </li>
       
   
-    </ul>
+    </ul >
+  
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle >
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
@@ -30,12 +39,12 @@
         <a class="dropdown-item" (click)="logout()"><i class ="fa fa-sign-out"></i>Logout</a>
       </div>
     </div>
-    <form  *ngIf="!loggedIn()"  #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit) = "login()">
+    <form  *ngIf="!loggedIn()"   #loginForm="ngForm" class="form-inline my-2 my-lg-0  ml-auto " (ngSubmit) = "login()">
       <input class="form-control mr-sm-2" type="text" name= "username" placeholder ="Username" required [(ngModel)] ="model.username" >
       <input class="form-control mr-sm-2" type="password" name= "password" placeholder="Password"  required [(ngModel)]="model.password" >
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
   </div>
- 
-  
+</div>
 </nav>
+
