--- a/SocietyApp-SPA/src/app/register/register.component.html
+++ b/SocietyApp-SPA/src/app/register/register.component.html
@@ -1,7 +1,15 @@
 <form #registerForm="ngForm" (ngSubmit)="register()" >
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
-
+  <div class="form-group">
+      <input type="text" class="form-control" name="firstname" [(ngModel)]="model.firstname" required placeholder="firstname">
+    </div> 
+    <div class="form-group">
+        <input type="text" class="form-control" name="lastname" [(ngModel)]="model.lastname" required placeholder="lastname">
+      </div> 
+ <div class="form-group">
+     <input type="text" class="form-control" name="flatno" [(ngModel)]="model.flatno" required placeholder="flatno">
+        </div>
   <div class="form-group">
     <input type="text" class="form-control" name="username" [(ngModel)]="model.username" required placeholder="Username">
   </div> 
