--- a/SocietyApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/SocietyApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-4">
   <div class="row">
-    <div class="col-sm-4">
+    <!-- <div class="col-sm-4"> -->
         
-      <div class="card bg-light mb-3" style="max-width: 20rem;">
+      <!-- <div class="card bg-light mb-3" style="max-width: 20rem;">
         <div class="card-body">
           <div class="row">
             <strong class="col-sm-6 text-right">Flat No.</strong>
@@ -12,18 +12,18 @@
             <strong class="col-sm-6  text-right">UserType</strong>
             <p class="col-sm-6 align-left ">{{ user?.userType }}</p>
           </div>
-          <!-- <div class="row">
+          <div class="row">
             <strong class="col-sm-6  text-right">Vehicles</strong>
             <p class="col-sm-6 align-left ">{{ user?.userType }}</p>
-          </div> -->
+          </div>
         </div>
         <div class="card-footer">
           <div class="btn-group d-flex">
             <button class="btn btn-success w-100">Message</button>
           </div>
         </div>
-      </div>
-    </div>
+      </div> -->
+     <!-- </div>  -->
     <div class="col-sm-8">
       <div class="tab-panel">
         <tabset class="member-tabset">
