--- a/SocietyApp-SPA/src/app/register/register.component.html
+++ b/SocietyApp-SPA/src/app/register/register.component.html
@@ -1,26 +1,66 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" >
-  <h2 class="text-center text-primary">Sign Up</h2>
-  <hr>
-  <div class="form-group">
-      <input type="text" class="form-control" name="firstname" [(ngModel)]="model.firstname" required placeholder="firstname">
-    </div> 
-    <div class="form-group">
-        <input type="text" class="form-control" name="lastname" [(ngModel)]="model.lastname" required placeholder="lastname">
-      </div> 
- <div class="form-group">
-     <input type="text" class="form-control" name="flatno" [(ngModel)]="model.flatno" required placeholder="flatno">
+<div class="container mt-5">
+
+  <div class="card">
+    <div class="card-header">
+      <strong>Basic Form</strong> Elements
+    </div>
+    <div class="card-body">
+      <form #registerForm="ngForm" enctype="multipart/form-data" (ngSubmit)="register()" class="form-horizontal">
+       
+        <div class="form-group row">
+          <label class="col-md-3 col-form-label" for="text-input">FirstName</label>
+          <div class="col-md-9">
+            <input type="text" name="firstname" [(ngModel)]="model.firstname" required placeholder="firstname"
+              class="form-control">
+            <span class="help-block">This is a help text</span>
+          </div>
         </div>
-  <div class="form-group">
-    <input type="text" class="form-control" name="username" [(ngModel)]="model.username" required placeholder="Username">
-  </div> 
-
-  <div class="form-group">
-    <input type="password" class="form-control" name="password" [(ngModel)]="model.password" required placeholder="Password">
+        <div class="form-group row">
+          <label class="col-md-3 col-form-label" for="text-input">Lastname</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" name="lastname" [(ngModel)]="model.lastname" required
+              placeholder="lastname">
+            <span class="help-block">This is a help text</span>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" name="flatno" [(ngModel)]="model.flatno" required
+              placeholder="flatno">
+            <span class="help-block">This is a help text</span>
+          </div>
+        </div>
+        <div class="form-group">
+            <label  for="usertype" class="col-md-3 col-form-label">UserType</label>
+            <div class="col-md-9">
+          <select name="userType" class="form-control" [(ngModel)]="model.userType">
+            <option value="" selected="selected" disabled>Select your option</option>
+            <option value="0">Resident</option>
+            <option value="1">Tenant</option>
+          </select>
+        </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" name="username" [(ngModel)]="model.username" required
+              placeholder="Username">
+            <span class="help-block">This is a help text</span>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
+          <div class="col-md-9">
+            <input type="password" class="form-control" name="password" [(ngModel)]="model.password" required
+              placeholder="Password">
+            <span class="help-block">This is a help text</span>
+          </div>
+        </div>
+        <div class="form-group text-center">
+          <button class="btn btn-success" type="submit">Register</button>
+          <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+        </div>
+      </form>
+    </div>
   </div>
-
-  <div class="form-group text-center">
-    <button class="btn btn-success" type="submit">Register</button>
-    <button class="btn btn-default" type="button" (click)="cancel()" >Cancel</button>
-  </div>
-  
-</form>
